--- a/index.html
+++ b/index.html
@@ -4,17 +4,70 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Babylon js</title>
+    <title>BABYLON JS</title>
 
-    <script type="text/javascript" src="./js/script.js"></script>
+    <style>
+      html,
+      body {
+        overflow: hidden;
+        width: 100%;
+        height: 100%;
+        margin: 0;
+        padding: 0;
+      }
+
+      #renderCanvas {
+        width: 100%;
+        height: 100%;
+        touch-action: none;
+      }
+    </style>
+    <script src="https://cdn.babylonjs.com/babylon.js"></script>
+    <!-- SCRIPT TO IMPORT MODELS INTO THE SCENE -->
+    <script src="https://cdn.babylonjs.com/loaders/babylonjs.loaders.min.js"></script>
+    <!-- SCRIPT TO ALLOW THE USE IN A TOUCH SCREEN -->
+    <script src="https://code.jquery.com/pep/0.4.3/pep.js"></script>
   </head>
   <body>
-    <!-- <babylon model="Path to File"></babylon> -->
-    <button onclick="test();">click</button>
+    <canvas id="renderCanvas" touch-action="none"></canvas>
+    <script>
+      const canvas = document.getElementById("renderCanvas"); // GET THE CANVAS ELEMENT
+      const engine = new BABYLON.Engine(canvas, true); // GENERATE THE BABYLON 3D ENGINE
+      //CODE TO MATCH THE PLAYGROUND FORMAT ********
+      const createScene = function () {
+        const scene = new BABYLON.Scene(engine);
+        BABYLON.SceneLoader.ImportMeshAsync(
+          "",
+          "https://assets.babylonjs.com/meshes/",
+          "box.babylon"
+        );
+        const camera = new BABYLON.ArcRotateCamera(
+          "camera",
+          -Math.PI / 2,
+          Math.PI / 2.5,
+          15,
+          new BABYLON.Vector3(0, 0, 0)
+        );
+        camera.attachControl(canvas, true);
+        const light = new BABYLON.HemisphericLight(
+          "light",
+          new BABYLON.Vector3(1, 1, 0)
+        );
+        return scene;
+      };
 
+      //CODE TO MATCH THE PLAYGROUND FORMAT ******** /
 
+      const scene = createScene(); // CALL THE CREATESCENE FUNCTION
+      //REGISTER A RENDER LOOP TO REPEATEDLY RENDER THE SCENE
+      engine.runRenderLoop(function () {
+        scene.render();
+      });
 
-    <!-- SCRIPT SRC -->
-    <script src="https://cdn.babylonjs.com/viewer/babylon.viewer.js"></script>
+      // WATCH FOR BROWSER/CANVAS RESIZE EVENTS
+      window.addEventListener("resize", function () {
+        engine.resize();
+      });
+    </script>
   </body>
 </html>
