--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         touch-action: none;
       }
     </style>
+
     <script src="https://cdn.babylonjs.com/babylon.js"></script>
     <!-- SCRIPT TO IMPORT MODELS INTO THE SCENE -->
     <script src="https://cdn.babylonjs.com/loaders/babylonjs.loaders.min.js"></script>
@@ -44,8 +45,17 @@
         //   "box.babylon"
         // );
 
+        // ELEMENTS
         // CONSTRUCT MODEL
-        BABYLON.MeshBuilder.CreateBox("box", {});
+        const box = BABYLON.MeshBuilder.CreateBox("box", {});
+        box.position.y = 0.5; //BOX CREATED WITH DEFAULT SIZE SO HEIGHT IS 1
+        // GROUND
+        const ground = BABYLON.MeshBuilder.CreateGround("ground", {
+          width: 10,
+          height: 10,
+        });
+
+        // SCENE
         const camera = new BABYLON.ArcRotateCamera(
           "camera",
           -Math.PI / 2,
