--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         // box.scaling.z = 3;
 
         // OR SCALING IN A SINGLE LINE
-        box.scaling = new BABYLON.Vector3(2, 1.5, 3);
+        //box.scaling = new BABYLON.Vector3(2, 1.5, 3);
 
         // POSITION
         // box.position.x = -2;
@@ -64,11 +64,21 @@
         // box.position.z = 0.1;
 
         // OR POSITION IN A SINGLE LINE
-        box.position = new BABYLON.Vector3(-2, 4.2, 0.1);
+        //box.position = new BABYLON.Vector3(-2, 4.2, 0.1);
 
         // ORIENTATION
         //box.rotation.y = Math.PI / 4;
-        box.rotation.y = BABYLON.Tools.ToRadians(45);
+        //box.rotation.y = BABYLON.Tools.ToRadians(45);
+
+        // BASIC HOUSE
+        const roof = BABYLON.MeshBuilder.CreateCylinder("roof", {
+          diameter: 1.3,
+          height: 1.2,
+          tessellation: 3,
+        });
+        roof.scaling.x = 0.75;
+        roof.rotation.z = Math.PI / 2;
+        roof.position.y = 1.22;
         // GROUND
         const ground = BABYLON.MeshBuilder.CreateGround("ground", {
           width: 10,
