--- a/index.html
+++ b/index.html
@@ -35,103 +35,15 @@
       const canvas = document.getElementById("renderCanvas"); // GET THE CANVAS ELEMENT
       const engine = new BABYLON.Engine(canvas, true); // GENERATE THE BABYLON 3D ENGINE
       //CODE TO MATCH THE PLAYGROUND FORMAT ********
-      const createScene = function () {
+      const createScene = () => {
         const scene = new BABYLON.Scene(engine);
 
-        // // IMPORT MODEL
-        // BABYLON.SceneLoader.ImportMeshAsync(
-        //   "",
-        //   "https://assets.babylonjs.com/meshes/",
-        //   "box.babylon"
-        // );
-
-        // ELEMENTS
-        // FACE MATERIALS
-        faceUV = [];
-        faceUV[0] = new BABYLON.Vector4(0.5, 0.0, 0.75, 1.0); // REAR / BACK FACE
-        faceUV[1] = new BABYLON.Vector4(0.0, 0.0, 0.25, 1.0); // FRONT FACE
-        faceUV[2] = new BABYLON.Vector4(0.25, 0, 0.5, 1.0); // RIGHT SIDE
-        faceUV[3] = new BABYLON.Vector4(0.75, 0, 1.0, 1.0); // LEFT SIDE
-        // CONSTRUCT MODEL
-        const box = BABYLON.MeshBuilder.CreateBox("box", {faceUV: faceUV, wrap: true});
-        box.position.y = 0.5; //BOX CREATED WITH DEFAULT SIZE SO HEIGHT IS 1
-        // PLACE AND SCALE A MESH
-        // SIZE
-        // box.scaling.x = 2;
-        // box.scaling.y = 1.5;
-        // box.scaling.z = 3;
-
-        // OR SCALING IN A SINGLE LINE
-        //box.scaling = new BABYLON.Vector3(2, 1.5, 3);
-
-        // POSITION
-        // box.position.x = -2;
-        // box.position.y = 4.2;
-        // box.position.z = 0.1;
-
-        // OR POSITION IN A SINGLE LINE
-        //box.position = new BABYLON.Vector3(-2, 4.2, 0.1);
-
-        // ORIENTATION
-        //box.rotation.y = Math.PI / 4;
-        //box.rotation.y = BABYLON.Tools.ToRadians(45);
-
-        // BASIC HOUSE
-        const roof = BABYLON.MeshBuilder.CreateCylinder("roof", {
-          diameter: 1.3,
-          height: 1.2,
-          tessellation: 3,
-        });
-        roof.scaling.x = 0.75;
-        roof.rotation.z = Math.PI / 2;
-        roof.position.y = 1.22;
-
-        // GROUND
-        const ground = BABYLON.MeshBuilder.CreateGround("ground", {
-          width: 10,
-          height: 10,
-        });
-
-        // TEXTURE;
-        const groundMat = new BABYLON.StandardMaterial("groundMat");
-        groundMat.diffuseColor = new BABYLON.Color3(0, 1, 0); // RGB
-        ground.material = groundMat; // PLACE MATERIAL PROPERTY OF THE GROUND
-
-        const roofMat = new BABYLON.StandardMaterial("roofMat");
-        roofMat.diffuseTexture = new BABYLON.Texture(
-          "https://assets.babylonjs.com/environments/roof.jpg",
-          scene
-        );
-
-        const boxMat = new BABYLON.StandardMaterial("boxMat");
-        boxMat.diffuseTexture = new BABYLON.Texture(
-          "https://assets.babylonjs.com/environments/cubehouse.png"
-        );
-
-        roof.material = roofMat;
-        box.material = boxMat;
-
-        // SOUND
-        // const sound = new BABYLON.Sound(
-        //   "name",
-        //   "./src/sound.mp3",
-        //   scene,
-        //   null,
-        //   { loop: true, autoplay: true }
-        // );
-
-        //
-
-        // // TO PLAY SOUND ONCE
-        const sound = new BABYLON.Sound("sound", "./src/sound.mp3", scene);
-        // LEAVE TIME FOR THE SOUND FILE TO LOAD BEFORE PLAYING IT
-        sound.play();
-        // SCENE
+        /**** Set camera and light *****/
         const camera = new BABYLON.ArcRotateCamera(
           "camera",
           -Math.PI / 2,
           Math.PI / 2.5,
-          15,
+          10,
           new BABYLON.Vector3(0, 0, 0)
         );
         camera.attachControl(canvas, true);
@@ -139,12 +51,74 @@
           "light",
           new BABYLON.Vector3(1, 1, 0)
         );
+
+        const ground = buildGround();
+        const box = buildBox();
+        const roof = buildRoof();
+
         return scene;
       };
 
-      //CODE TO MATCH THE PLAYGROUND FORMAT ******** /
+      /******Build Functions***********/
+      const buildGround = () => {
+        //color
+        const groundMat = new BABYLON.StandardMaterial("groundMat");
+        groundMat.diffuseColor = new BABYLON.Color3(0, 1, 0);
 
-      const scene = createScene(); // CALL THE CREATESCENE FUNCTION
+        const ground = BABYLON.MeshBuilder.CreateGround("ground", {
+          width: 10,
+          height: 10,
+        });
+        ground.material = groundMat;
+      };
+
+      const buildBox = () => {
+        //texture
+        const boxMat = new BABYLON.StandardMaterial("boxMat");
+        boxMat.diffuseTexture = new BABYLON.Texture(
+          "https://assets.babylonjs.com/environments/cubehouse.png"
+        );
+
+        //options parameter to set different images on each side
+        const faceUV = [];
+        faceUV[0] = new BABYLON.Vector4(0.5, 0.0, 0.75, 1.0); //rear face
+        faceUV[1] = new BABYLON.Vector4(0.0, 0.0, 0.25, 1.0); //front face
+        faceUV[2] = new BABYLON.Vector4(0.25, 0, 0.5, 1.0); //right side
+        faceUV[3] = new BABYLON.Vector4(0.75, 0, 1.0, 1.0); //left side
+        // top 4 and bottom 5 not seen so not set
+
+        /**** World Objects *****/
+        const box = BABYLON.MeshBuilder.CreateBox("box", {
+          faceUV: faceUV,
+          wrap: true,
+        });
+        box.material = boxMat;
+        box.position.y = 0.5;
+
+        return box;
+      };
+
+      const buildRoof = () => {
+        //texture
+        const roofMat = new BABYLON.StandardMaterial("roofMat");
+        roofMat.diffuseTexture = new BABYLON.Texture(
+          "https://assets.babylonjs.com/environments/roof.jpg"
+        );
+
+        const roof = BABYLON.MeshBuilder.CreateCylinder("roof", {
+          diameter: 1.3,
+          height: 1.2,
+          tessellation: 3,
+        });
+        roof.material = roofMat;
+        roof.scaling.x = 0.75;
+        roof.rotation.z = Math.PI / 2;
+        roof.position.y = 1.22;
+
+        return roof;
+      };
+      //CODE TO MATCH THE PLAYGROUND FORMAT ******** /
+      const scene = createScene();
       //REGISTER A RENDER LOOP TO REPEATEDLY RENDER THE SCENE
       engine.runRenderLoop(function () {
         scene.render();
