--- a/pages/index.html
+++ b/pages/index.html
@@ -296,6 +296,8 @@
         wheelLF = wheelRF.clone("wheelLF");
         wheelLF.position.y = -0.2 - 0.035;
 
+        car.position.y = 0.17;
+
         return car;
       };
       //CODE TO MATCH THE PLAYGROUND FORMAT ******** /
