--- a/pages/index.html
+++ b/pages/index.html
@@ -80,8 +80,24 @@
         buildDwellings();
 
         // CAR
-        const car = buildCar();
-        car.rotation.x = -Math.PI / 2;
+        BABYLON.SceneLoader.ImportMeshAsync(
+          "",
+          "https://assets.babylonjs.com/meshes/",
+          "car.babylon"
+        ).then(() => {
+          const wheelRB = scene.getMeshByName("wheelRB");
+          const wheelRF = scene.getMeshByName("wheelRF");
+          const wheelLB = scene.getMeshByName("wheelLB");
+          const wheelLF = scene.getMeshByName("wheelLF");
+          console.log(wheelRB.animations);
+          scene.beginAnimation(wheelRB, 0, 30, true);
+          scene.beginAnimation(wheelRF, 0, 30, true);
+          scene.beginAnimation(wheelLB, 0, 30, true);
+          scene.beginAnimation(wheelLF, 0, 30, true);
+          
+          const car = scene.getMeshByName("car");
+          car.position.y = 0.17;
+        });
 
         return scene;
       };
@@ -221,85 +237,109 @@
         return roof;
       };
 
-      // BUILD CAR
-      const buildCar = () => {
-        //BASE
-        const outline = [
-          new BABYLON.Vector3(-0.3, 0, -0.1),
-          new BABYLON.Vector3(0.2, 0, -0.1),
-        ];
+      //   // BUILD CAR
+      //   const buildCar = () => {
+      //     //BASE
+      //     const outline = [
+      //       new BABYLON.Vector3(-0.3, 0, -0.1),
+      //       new BABYLON.Vector3(0.2, 0, -0.1),
+      //     ];
 
-        // CURVED FRONT
-        for (let i = 0; i < 20; i++) {
-          outline.push(
-            new BABYLON.Vector3(
-              0.2 * Math.cos((i * Math.PI) / 40),
-              0,
-              0.2 * Math.sin((i * Math.PI) / 40) - 0.1
-            )
-          );
-        }
+      //     // CURVED FRONT
+      //     for (let i = 0; i < 20; i++) {
+      //       outline.push(
+      //         new BABYLON.Vector3(
+      //           0.2 * Math.cos((i * Math.PI) / 40),
+      //           0,
+      //           0.2 * Math.sin((i * Math.PI) / 40) - 0.1
+      //         )
+      //       );
+      //     }
 
-        // TOP
-        outline.push(new BABYLON.Vector3(0, 0, 0.1));
-        outline.push(new BABYLON.Vector3(-0.3, 0, 0.1));
+      //     // TOP
+      //     outline.push(new BABYLON.Vector3(0, 0, 0.1));
+      //     outline.push(new BABYLON.Vector3(-0.3, 0, 0.1));
 
-        // FACE UVS
-        const faceUV = [];
-        faceUV[0] = new BABYLON.Vector4(0, 0.5, 0.38, 1);
-        faceUV[1] = new BABYLON.Vector4(0, 0, 1, 0.5);
-        faceUV[2] = new BABYLON.Vector4(0.38, 1, 0, 0.5);
+      //     // FACE UVS
+      //     const faceUV = [];
+      //     faceUV[0] = new BABYLON.Vector4(0, 0.5, 0.38, 1);
+      //     faceUV[1] = new BABYLON.Vector4(0, 0, 1, 0.5);
+      //     faceUV[2] = new BABYLON.Vector4(0.38, 1, 0, 0.5);
 
-        // CAR MATERIAL
-        const carMat = new BABYLON.StandardMaterial("carMat");
-        carMat.diffuseTexture = new BABYLON.Texture(
-          "https://assets.babylonjs.com/environments/car.png"
-        );
+      //     // CAR MATERIAL
+      //     const carMat = new BABYLON.StandardMaterial("carMat");
+      //     carMat.diffuseTexture = new BABYLON.Texture(
+      //       "https://assets.babylonjs.com/environments/car.png"
+      //     );
 
-        const car = BABYLON.MeshBuilder.ExtrudePolygon("car", {
-          shape: outline,
-          depth: 0.2,
-          faceUV: faceUV,
-          wrap: true,
-        });
-        car.material = carMat;
+      //     const car = BABYLON.MeshBuilder.ExtrudePolygon("car", {
+      //       shape: outline,
+      //       depth: 0.2,
+      //       faceUV: faceUV,
+      //       wrap: true,
+      //     });
+      //     car.material = carMat;
 
-        // WHEELS FACE UVS
-        const wheelUV = [];
-        wheelUV[0] = new BABYLON.Vector4(0, 0, 1, 1);
-        wheelUV[1] = new BABYLON.Vector4(0, 0.5, 0, 0.5);
-        wheelUV[2] = new BABYLON.Vector4(0, 0, 1, 1);
+      //     // WHEELS FACE UVS
+      //     const wheelUV = [];
+      //     wheelUV[0] = new BABYLON.Vector4(0, 0, 1, 1);
+      //     wheelUV[1] = new BABYLON.Vector4(0, 0.5, 0, 0.5);
+      //     wheelUV[2] = new BABYLON.Vector4(0, 0, 1, 1);
 
-        // WHEELS MATERIAL
-        const wheelMat = new BABYLON.StandardMaterial("wheelMat");
-        wheelMat.diffuseTexture = new BABYLON.Texture(
-          "https://assets.babylonjs.com/environments/wheel.png"
-        );
+      //     // WHEELS MATERIAL
+      //     const wheelMat = new BABYLON.StandardMaterial("wheelMat");
+      //     wheelMat.diffuseTexture = new BABYLON.Texture(
+      //       "https://assets.babylonjs.com/environments/wheel.png"
+      //     );
 
-        const wheelRB = BABYLON.MeshBuilder.CreateCylinder("wheelRB", {
-          diameter: 0.125,
-          height: 0.05,
-          faceUV: wheelUV,
-        });
-        wheelRB.material = wheelMat;
-        wheelRB.parent = car;
-        wheelRB.position.z = -0.1;
-        wheelRB.position.x = -0.2;
-        wheelRB.position.y = 0.035;
+      //     const wheelRB = BABYLON.MeshBuilder.CreateCylinder("wheelRB", {
+      //       diameter: 0.125,
+      //       height: 0.05,
+      //       faceUV: wheelUV,
+      //     });
+      //     wheelRB.material = wheelMat;
+      //     wheelRB.parent = car;
+      //     wheelRB.position.z = -0.1;
+      //     wheelRB.position.x = -0.2;
+      //     wheelRB.position.y = 0.035;
 
-        wheelRF = wheelRB.clone("wheelRF");
-        wheelRF.position.x = 0.1;
+      //     wheelRF = wheelRB.clone("wheelRF");
+      //     wheelRF.position.x = 0.1;
 
-        wheelLB = wheelRB.clone("wheelLB");
-        wheelLB.position.y = -0.2 - 0.035;
+      //     wheelLB = wheelRB.clone("wheelLB");
+      //     wheelLB.position.y = -0.2 - 0.035;
 
-        wheelLF = wheelRF.clone("wheelLF");
-        wheelLF.position.y = -0.2 - 0.035;
+      //     wheelLF = wheelRF.clone("wheelLF");
+      //     wheelLF.position.y = -0.2 - 0.035;
 
-        car.position.y = 0.17;
+      //     // ANIMATION OF THE WHEELS
+      //     const animWheel = new BABYLON.Animation(
+      //       "wheelAnimation",
+      //       "rotation.y",
+      //       30,
+      //       BABYLON.Animation.ANIMATIONTYPE_FLOAT,
+      //       BABYLON.Animation.ANIMATIONLOOPMODE_CYCLE
+      //     );
 
-        return car;
-      };
+      //     const wheelKeys = [];
+
+      //     // AT THE ANIMATION KEY 0, THE VALUE OF ROTATION.Y IS 0
+      //     wheelKeys.push({ frame: 0, value: 2 * Math.PI });
+
+      //     // SET THE KEYS
+      //     animWheel.setKeys(wheelKeys);
+
+      //     // LINK THE ANIMATION TO THE WHEEL
+      //     wheelRB.animations = [];
+      //     wheelRB.animations.push(animWheel);
+
+      //     //scene.beginAnimation(wheelRB, 0, 30, true);
+
+      //     // CAR POSITION
+      //     car.position.y = 0.17;
+
+      //     return car;
+      //   };
       //CODE TO MATCH THE PLAYGROUND FORMAT ******** /
       const scene = createScene();
       //REGISTER A RENDER LOOP TO REPEATEDLY RENDER THE SCENE
