--- a/pages/index.html
+++ b/pages/index.html
@@ -63,7 +63,6 @@
       const createScene = () => {
         const scene = new BABYLON.Scene(engine);
 
-        /**** Set camera and light *****/
         const camera = new BABYLON.ArcRotateCamera(
           "camera",
           -Math.PI / 2,
@@ -77,269 +76,69 @@
           new BABYLON.Vector3(1, 1, 0)
         );
 
-        buildDwellings();
-
-        // CAR
         BABYLON.SceneLoader.ImportMeshAsync(
           "",
           "https://assets.babylonjs.com/meshes/",
-          "car.babylon"
+          "village.glb"
+        );
+        BABYLON.SceneLoader.ImportMeshAsync(
+          "",
+          "https://assets.babylonjs.com/meshes/",
+          "car.glb"
         ).then(() => {
+          const car = scene.getMeshByName("car");
+          car.rotation = new BABYLON.Vector3(Math.PI / 2, 0, -Math.PI / 2);
+          car.position.y = 0.16;
+          car.position.x = -3;
+          car.position.z = 8;
+
+          const animCar = new BABYLON.Animation(
+            "carAnimation",
+            "position.z",
+            30,
+            BABYLON.Animation.ANIMATIONTYPE_FLOAT,
+            BABYLON.Animation.ANIMATIONLOOPMODE_CYCLE
+          );
+
+          const carKeys = [];
+
+          carKeys.push({
+            frame: 0,
+            value: 8,
+          });
+
+          carKeys.push({
+            frame: 150,
+            value: -7,
+          });
+
+          carKeys.push({
+            frame: 200,
+            value: -7,
+          });
+
+          animCar.setKeys(carKeys);
+
+          car.animations = [];
+          car.animations.push(animCar);
+
+          scene.beginAnimation(car, 0, 200, true);
+
+          //wheel animation
           const wheelRB = scene.getMeshByName("wheelRB");
           const wheelRF = scene.getMeshByName("wheelRF");
           const wheelLB = scene.getMeshByName("wheelLB");
           const wheelLF = scene.getMeshByName("wheelLF");
-          console.log(wheelRB.animations);
+
           scene.beginAnimation(wheelRB, 0, 30, true);
           scene.beginAnimation(wheelRF, 0, 30, true);
           scene.beginAnimation(wheelLB, 0, 30, true);
           scene.beginAnimation(wheelLF, 0, 30, true);
-          
-          const car = scene.getMeshByName("car");
-          car.position.y = 0.17;
         });
 
         return scene;
       };
 
-      /******Build Functions***********/
-      const buildDwellings = () => {
-        const ground = buildGround();
-
-        // MULTIPLE HOUSES
-        const detached_house = buildHouse(1);
-        detached_house.rotation.y = -Math.PI / 16;
-        detached_house.position.x = -6.8;
-        detached_house.position.z = 2.5;
-
-        const semi_house = buildHouse(2);
-        semi_house.rotation.y = -Math.PI / 16;
-        semi_house.position.x = -4.5;
-        semi_house.position.z = 3;
-
-        const places = []; //each entry is an array [house type, rotation, x, z]
-        places.push([1, -Math.PI / 16, -6.8, 2.5]);
-        places.push([2, -Math.PI / 16, -4.5, 3]);
-        places.push([2, -Math.PI / 16, -1.5, 4]);
-        places.push([2, -Math.PI / 3, 1.5, 6]);
-        places.push([2, (15 * Math.PI) / 16, -6.4, -1.5]);
-        places.push([1, (15 * Math.PI) / 16, -4.1, -1]);
-        places.push([2, (15 * Math.PI) / 16, -2.1, -0.5]);
-        places.push([1, (5 * Math.PI) / 4, 0, -1]);
-        places.push([1, Math.PI + Math.PI / 2.5, 0.5, -3]);
-        places.push([2, Math.PI + Math.PI / 2.1, 0.75, -5]);
-        places.push([1, Math.PI + Math.PI / 2.25, 0.75, -7]);
-        places.push([2, Math.PI / 1.9, 4.75, -1]);
-        places.push([1, Math.PI / 1.95, 4.5, -3]);
-        places.push([2, Math.PI / 1.9, 4.75, -5]);
-        places.push([1, Math.PI / 1.9, 4.75, -7]);
-        places.push([2, -Math.PI / 3, 5.25, 2]);
-        places.push([1, -Math.PI / 3, 6, 4]);
-
-        // CREATE INSTANCE FROM THE FIRST TWO THAT WERE BUILT
-        const houses = [];
-        for (let i = 0; i < places.length; i++) {
-          if (places[i][0] === 1) {
-            houses[i] = detached_house.createInstance("house" + i);
-          } else {
-            houses[i] = semi_house.createInstance("house" + i);
-          }
-          houses[i].rotation.y = places[i][1];
-          houses[i].position.x = places[i][2];
-          houses[i].position.z = places[i][3];
-        }
-      };
-
-      const buildGround = () => {
-        //color
-        const groundMat = new BABYLON.StandardMaterial("groundMat");
-        groundMat.diffuseColor = new BABYLON.Color3(0, 1, 0);
-
-        const ground = BABYLON.MeshBuilder.CreateGround("ground", {
-          width: 15,
-          height: 16,
-        });
-        ground.material = groundMat;
-      };
-
-      const buildHouse = (width) => {
-        const box = buildBox(width);
-        const roof = buildRoof(width);
-
-        return BABYLON.Mesh.MergeMeshes(
-          [box, roof],
-          true,
-          false,
-          null,
-          false,
-          true
-        );
-      };
-
-      const buildBox = (width) => {
-        //texture
-        const boxMat = new BABYLON.StandardMaterial("boxMat");
-        if (width == 2) {
-          boxMat.diffuseTexture = new BABYLON.Texture(
-            "https://assets.babylonjs.com/environments/semihouse.png"
-          );
-        } else {
-          boxMat.diffuseTexture = new BABYLON.Texture(
-            "https://assets.babylonjs.com/environments/cubehouse.png"
-          );
-        }
-
-        //options parameter to set different images on each side
-        const faceUV = [];
-        if (width == 2) {
-          faceUV[0] = new BABYLON.Vector4(0.6, 0.0, 1.0, 1.0); //rear face
-          faceUV[1] = new BABYLON.Vector4(0.0, 0.0, 0.4, 1.0); //front face
-          faceUV[2] = new BABYLON.Vector4(0.4, 0, 0.6, 1.0); //right side
-          faceUV[3] = new BABYLON.Vector4(0.4, 0, 0.6, 1.0); //left side
-        } else {
-          faceUV[0] = new BABYLON.Vector4(0.5, 0.0, 0.75, 1.0); //rear face
-          faceUV[1] = new BABYLON.Vector4(0.0, 0.0, 0.25, 1.0); //front face
-          faceUV[2] = new BABYLON.Vector4(0.25, 0, 0.5, 1.0); //right side
-          faceUV[3] = new BABYLON.Vector4(0.75, 0, 1.0, 1.0); //left side
-        }
-        // top 4 and bottom 5 not seen so not set
-
-        /**** World Objects *****/
-        const box = BABYLON.MeshBuilder.CreateBox("box", {
-          width: width,
-          faceUV: faceUV,
-          wrap: true,
-        });
-        box.material = boxMat;
-        box.position.y = 0.5;
-
-        return box;
-      };
-
-      const buildRoof = (width) => {
-        //texture
-        const roofMat = new BABYLON.StandardMaterial("roofMat");
-        roofMat.diffuseTexture = new BABYLON.Texture(
-          "https://assets.babylonjs.com/environments/roof.jpg"
-        );
-
-        const roof = BABYLON.MeshBuilder.CreateCylinder("roof", {
-          diameter: 1.3,
-          height: 1.2,
-          tessellation: 3,
-        });
-        roof.material = roofMat;
-        roof.scaling.x = 0.75;
-        roof.scaling.y = width;
-        roof.rotation.z = Math.PI / 2;
-        roof.position.y = 1.22;
-
-        return roof;
-      };
-
-      //   // BUILD CAR
-      //   const buildCar = () => {
-      //     //BASE
-      //     const outline = [
-      //       new BABYLON.Vector3(-0.3, 0, -0.1),
-      //       new BABYLON.Vector3(0.2, 0, -0.1),
-      //     ];
-
-      //     // CURVED FRONT
-      //     for (let i = 0; i < 20; i++) {
-      //       outline.push(
-      //         new BABYLON.Vector3(
-      //           0.2 * Math.cos((i * Math.PI) / 40),
-      //           0,
-      //           0.2 * Math.sin((i * Math.PI) / 40) - 0.1
-      //         )
-      //       );
-      //     }
-
-      //     // TOP
-      //     outline.push(new BABYLON.Vector3(0, 0, 0.1));
-      //     outline.push(new BABYLON.Vector3(-0.3, 0, 0.1));
-
-      //     // FACE UVS
-      //     const faceUV = [];
-      //     faceUV[0] = new BABYLON.Vector4(0, 0.5, 0.38, 1);
-      //     faceUV[1] = new BABYLON.Vector4(0, 0, 1, 0.5);
-      //     faceUV[2] = new BABYLON.Vector4(0.38, 1, 0, 0.5);
-
-      //     // CAR MATERIAL
-      //     const carMat = new BABYLON.StandardMaterial("carMat");
-      //     carMat.diffuseTexture = new BABYLON.Texture(
-      //       "https://assets.babylonjs.com/environments/car.png"
-      //     );
-
-      //     const car = BABYLON.MeshBuilder.ExtrudePolygon("car", {
-      //       shape: outline,
-      //       depth: 0.2,
-      //       faceUV: faceUV,
-      //       wrap: true,
-      //     });
-      //     car.material = carMat;
-
-      //     // WHEELS FACE UVS
-      //     const wheelUV = [];
-      //     wheelUV[0] = new BABYLON.Vector4(0, 0, 1, 1);
-      //     wheelUV[1] = new BABYLON.Vector4(0, 0.5, 0, 0.5);
-      //     wheelUV[2] = new BABYLON.Vector4(0, 0, 1, 1);
-
-      //     // WHEELS MATERIAL
-      //     const wheelMat = new BABYLON.StandardMaterial("wheelMat");
-      //     wheelMat.diffuseTexture = new BABYLON.Texture(
-      //       "https://assets.babylonjs.com/environments/wheel.png"
-      //     );
-
-      //     const wheelRB = BABYLON.MeshBuilder.CreateCylinder("wheelRB", {
-      //       diameter: 0.125,
-      //       height: 0.05,
-      //       faceUV: wheelUV,
-      //     });
-      //     wheelRB.material = wheelMat;
-      //     wheelRB.parent = car;
-      //     wheelRB.position.z = -0.1;
-      //     wheelRB.position.x = -0.2;
-      //     wheelRB.position.y = 0.035;
-
-      //     wheelRF = wheelRB.clone("wheelRF");
-      //     wheelRF.position.x = 0.1;
-
-      //     wheelLB = wheelRB.clone("wheelLB");
-      //     wheelLB.position.y = -0.2 - 0.035;
-
-      //     wheelLF = wheelRF.clone("wheelLF");
-      //     wheelLF.position.y = -0.2 - 0.035;
-
-      //     // ANIMATION OF THE WHEELS
-      //     const animWheel = new BABYLON.Animation(
-      //       "wheelAnimation",
-      //       "rotation.y",
-      //       30,
-      //       BABYLON.Animation.ANIMATIONTYPE_FLOAT,
-      //       BABYLON.Animation.ANIMATIONLOOPMODE_CYCLE
-      //     );
-
-      //     const wheelKeys = [];
-
-      //     // AT THE ANIMATION KEY 0, THE VALUE OF ROTATION.Y IS 0
-      //     wheelKeys.push({ frame: 0, value: 2 * Math.PI });
-
-      //     // SET THE KEYS
-      //     animWheel.setKeys(wheelKeys);
-
-      //     // LINK THE ANIMATION TO THE WHEEL
-      //     wheelRB.animations = [];
-      //     wheelRB.animations.push(animWheel);
-
-      //     //scene.beginAnimation(wheelRB, 0, 30, true);
-
-      //     // CAR POSITION
-      //     car.position.y = 0.17;
-
-      //     return car;
-      //   };
       //CODE TO MATCH THE PLAYGROUND FORMAT ******** /
       const scene = createScene();
       //REGISTER A RENDER LOOP TO REPEATEDLY RENDER THE SCENE
