DUDE IMPORTED MODEL

--- a/pages/index.html
+++ b/pages/index.html
@@ -136,6 +136,18 @@
           scene.beginAnimation(wheelLF, 0, 30, true);
         });
 
+        // Dude
+        BABYLON.SceneLoader.ImportMeshAsync(
+          "him",
+          "https://playground.babylonjs.com/scenes/Dude/",
+          "Dude.babylon",
+          scene
+        ).then((result) => {
+          const dude = result.meshes[0];
+          dude.scaling = new BABYLON.Vector3(0.25, 0.25, 0.25);
+
+          scene.beginAnimation(result.skeletons[0], 0, 100, true, 1);
+        });
         return scene;
       };
 
