--- a/pages/index.html
+++ b/pages/index.html
@@ -21,19 +21,6 @@
         height: 100%;
         touch-action: none;
       }
-
-      #holder {
-        width: 80%;
-        height: 100%;
-        float: left;
-      }
-
-      #instructions {
-        width: 20%;
-        height: 100%;
-        float: left;
-        background-color: rgb(145, 183, 255);
-      }
     </style>
 
     <script src="https://cdn.babylonjs.com/babylon.js"></script>
@@ -43,6 +30,8 @@
     <script src="https://code.jquery.com/pep/0.4.3/pep.js"></script>
     <!-- AIRCUT ALGORITHM-->
     <script src="https://preview.babylonjs.com/earcut.min.js"></script>
+
+    <script src="https://preview.babylonjs.com/viewer/babylon.viewer.js"></script>
   </head>
   <body>
     <div id="holder">
@@ -55,6 +44,16 @@
       <br />
       Instructions Instructions Instructions Instructions Instructions
       Instructions Instructions Instructions Instructions Instructions
+    </div>
+    <div id="readyplayerme-avatar">
+      <babylon
+        model="https://d1a370nemizbjq.cloudfront.net/c2933994-e012-4be8-ba53-bdb833e23b3e.glb"
+        templates.main.params.fill-screen="true"
+      ></babylon>
+      <!-- <babylon
+        model="./models/READYPLAYERME_AVATAR.glb"
+        templates.main.params.fill-screen="true"
+      ></babylon> -->
     </div>
     <script>
       const canvas = document.getElementById("renderCanvas"); // GET THE CANVAS ELEMENT
@@ -148,6 +147,23 @@
 
           scene.beginAnimation(result.skeletons[0], 0, 100, true, 1);
         });
+
+        // AVATAR
+        // var avatar = BABYLON.SceneLoader.Append("../models/", "READYPLAYERME_AVATAR.gbl", scene, function(meshes){
+        //   scene.createDefaultCameraOrLight(true, true, true);
+        // })
+        //
+        // BABYLON.SceneLoader.ImportMeshAsync(
+        //   "avatar",
+        //   "https://d1a370nemizbjq.cloudfront.net/",
+        //   "c2933994-e012-4be8-ba53-bdb833e23b3e.glb",
+        //   scene
+        // ).then((result) => {
+        //   const avatar = result.meshes[0];
+        //   avatar.scaling = new BABYLON.Vector3(0.25, 0.25, 0.25);
+
+        //   scene.beginAnimation(result.skeletons[0], 0, 100, true, 1);
+        // });
         return scene;
       };
 
