WALK AROUND THE VILLAGE

--- a/pages/index.html
+++ b/pages/index.html
@@ -93,53 +93,162 @@
           new BABYLON.Vector3(1, 1, 0)
         );
 
-        // SPHERE
-        const sphere = BABYLON.MeshBuilder.CreateSphere("sphere", {
-          diameter: 0.25,
+        BABYLON.SceneLoader.ImportMeshAsync(
+          "",
+          "https://assets.babylonjs.com/meshes/",
+          "village.glb"
+        );
+
+        // CAR
+        BABYLON.SceneLoader.ImportMeshAsync(
+          "",
+          "https://assets.babylonjs.com/meshes/",
+          "car.glb"
+        ).then(() => {
+          const car = scene.getMeshByName("car");
+          car.rotation = new BABYLON.Vector3(Math.PI / 2, 0, -Math.PI / 2);
+          car.position.y = 0.16;
+          car.position.x = -3;
+          car.position.z = 8;
+
+          const animCar = new BABYLON.Animation(
+            "carAnimation",
+            "position.z",
+            30,
+            BABYLON.Animation.ANIMATIONTYPE_FLOAT,
+            BABYLON.Animation.ANIMATIONLOOPMODE_CYCLE
+          );
+
+          const carKeys = [];
+
+          carKeys.push({
+            frame: 0,
+            value: 8,
+          });
+
+          carKeys.push({
+            frame: 150,
+            value: -7,
+          });
+
+          carKeys.push({
+            frame: 200,
+            value: -7,
+          });
+
+          animCar.setKeys(carKeys);
+
+          car.animations = [];
+          car.animations.push(animCar);
+
+          scene.beginAnimation(car, 0, 200, true);
+
+          //wheel animation
+          const wheelRB = scene.getMeshByName("wheelRB");
+          const wheelRF = scene.getMeshByName("wheelRF");
+          const wheelLB = scene.getMeshByName("wheelLB");
+          const wheelLF = scene.getMeshByName("wheelLF");
+
+          scene.beginAnimation(wheelRB, 0, 30, true);
+          scene.beginAnimation(wheelRF, 0, 30, true);
+          scene.beginAnimation(wheelLB, 0, 30, true);
+          scene.beginAnimation(wheelLF, 0, 30, true);
         });
-        sphere.position = new BABYLON.Vector3(2, 0, 0);
 
-        // DRAW LINES TO FORM A TRIANGLE
-        const points = [];
-        points.push(new BABYLON.Vector3(2, 0, 2));
-        points.push(new BABYLON.Vector3(2, 0, -2));
-        points.push(new BABYLON.Vector3(-2, 0, -2));
-        points.push(points[0]); // CLOSE THE TRIANGLE
-
-        BABYLON.MeshBuilder.CreateLines("triangle", { points: points });
-
-        const slide = function (turn, dist) {
-          // AFTER COVERING DISTANCE APPLY TURN
+        // WALK
+        const walk = function (turn, dist) {
           this.turn = turn;
           this.dist = dist;
         };
 
         const track = [];
-        track.push(new slide(Math.PI / 2, 4));
-        track.push(new slide((3 * Math.PI) / 4, 8));
-        track.push(new slide((3 * Math.PI) / 4, 8 + 4 * Math.sqrt(2)));
+        track.push(new walk(86, 7));
+        track.push(new walk(-85, 14.8));
+        track.push(new walk(-93, 16.5));
+        track.push(new walk(48, 25.5));
+        track.push(new walk(-112, 30.5));
+        track.push(new walk(-72, 33.2));
+        track.push(new walk(42, 37.5));
+        track.push(new walk(-98, 45.2));
+        track.push(new walk(0, 47));
 
-        let distance = 0;
-        let step = 0.05;
-        let p = 0;
+        // DUDE
+        BABYLON.SceneLoader.ImportMeshAsync(
+          "him",
+          "https://playground.babylonjs.com/scenes/Dude/",
+          "Dude.babylon",
+          scene
+        ).then((result) => {
+          const dude = result.meshes[0];
+          dude.scaling = new BABYLON.Vector3(0.008, 0.008, 0.008);
 
-        scene.onBeforeRenderObservable.add(() => {
-          sphere.movePOV(0, 0, step);
-          distance += step;
+          dude.position = new BABYLON.Vector3(-6, 0, 0);
+          dude.rotate(
+            BABYLON.Axis.Y,
+            BABYLON.Tools.ToRadians(-95),
+            BABYLON.Space.LOCAL
+          );
+          const startRotation = dude.rotationQuaternion.clone();
 
-          if (distance > track[p].dist) {
-            sphere.rotate(BABYLON.Axis.Y, track[p].turn, BABYLON.Space.LOCAL);
-            p += 1;
-            p %= track.length;
-            if (p === 0) {
-              distance = 0;
-              sphere.position = new BABYLON.Vector3(2, 0, 2); // RESET TO INITIAL CONDITIONS
-              sphere.rotation = BABYLON.Vector3.Zero(); // PREVENTS ERROR ACCUMULATION
+          scene.beginAnimation(result.skeletons[0], 0, 100, true, 1);
+
+          let distance = 0;
+          let step = 0.015;
+          let p = 0;
+
+          scene.onBeforeRenderObservable.add(() => {
+            dude.movePOV(0, 0, step);
+            distance += step;
+
+            if (distance > track[p].dist) {
+              dude.rotate(
+                BABYLON.Axis.Y,
+                BABYLON.Tools.ToRadians(track[p].turn),
+                BABYLON.Space.LOCAL
+              );
+              p += 1;
+              p %= track.length;
+              if (p === 0) {
+                distance = 0;
+                dude.position = new BABYLON.Vector3(-6, 0, 0);
+                dude.rotationQuaternion = startRotation.clone();
+              }
             }
-          }
-          // TEST
+          });
         });
 
+        // AVATAR
+        // var avatar = BABYLON.SceneLoader.Append("../models/", "READYPLAYERME_AVATAR.gbl", scene, function(meshes){
+        //   scene.createDefaultCameraOrLight(true, true, true);
+        // })
+        //
+        // BABYLON.SceneLoader.ImportMeshAsync(
+        //   "avatar",
+        //   "https://d1a370nemizbjq.cloudfront.net/",
+        //   "c2933994-e012-4be8-ba53-bdb833e23b3e.glb",
+        //   scene
+        // ).then((result) => {
+        //   const avatar = result.meshes[0];
+        //   avatar.scaling = new BABYLON.Vector3(0.25, 0.25, 0.25);
+
+        //   scene.beginAnimation(result.skeletons[0], 0, 100, true, 1);
+        // });
+
+        // BABYLON.SceneLoader.ImportMeshAsync(
+        //   "",
+        //   "../models/",
+        //   "avatar.glb",
+        //   scene,
+        //   function (newMeshes) {
+        //     newMeshes.forEach(function (mesh) {
+        //       mes.rotation = new BABYLON.Vector3(
+        //         BABYLON.Tools.ToRadians(45),
+        //         0,
+        //         0
+        //       );
+        //     });
+        //   }
+        // );
         return scene;
       };
 
