--- a/pages/index.html
+++ b/pages/index.html
@@ -76,6 +76,19 @@
       const createScene = () => {
         const scene = new BABYLON.Scene(engine);
 
+        // VALLEY
+        const largeGround = BABYLON.MeshBuilder.CreateGroundFromHeightMap(
+          "largeGround",
+          "https://assets.babylonjs.com/environments/villageheightmap.png",
+          {
+            width: 150,
+            height: 150,
+            subdivisions: 20,
+            minHeight: 0,
+            maxHeight: 10,
+          }
+        );
+
         const camera = new BABYLON.ArcRotateCamera(
           "camera",
           -Math.PI / 2,
@@ -86,7 +99,7 @@
         camera.attachControl(canvas, true);
         const light = new BABYLON.HemisphericLight(
           "light",
-          new BABYLON.Vector3(1, 1, 0)
+          new BABYLON.Vector3(4, 1, 0)
         );
 
         BABYLON.SceneLoader.ImportMeshAsync(
