--- a/pages/index.html
+++ b/pages/index.html
@@ -76,6 +76,32 @@
       const createScene = () => {
         const scene = new BABYLON.Scene(engine);
 
+        const camera = new BABYLON.ArcRotateCamera(
+          "camera",
+          -Math.PI / 2,
+          Math.PI / 2.5,
+          15,
+          new BABYLON.Vector3(0, 0, 0)
+        );
+        camera.attachControl(canvas, true);
+        const light = new BABYLON.HemisphericLight(
+          "light",
+          new BABYLON.Vector3(1, 1, 0)
+        );
+
+        // VILLAGE
+        const groundMat = new BABYLON.StandardMaterial("groundMat");
+        groundMat.diffuseTexture = new BABYLON.Texture(
+          "https://assets.babylonjs.com/environments/villagegreen.png"
+        );
+        groundMat.diffuseTexture.hasAlpha = true;
+
+        const ground2 = BABYLON.MeshBuilder.CreateGround("ground2", {
+          width: 24,
+          height: 24,
+        });
+        ground2.material = groundMat;
+
         // VALLEY
         const largeGroundMat = new BABYLON.StandardMaterial("largeGroundMat");
         largeGroundMat.diffuseTexture = new BABYLON.Texture(
@@ -95,25 +121,16 @@
         );
 
         largeGround.material = largeGroundMat;
-
-        const camera = new BABYLON.ArcRotateCamera(
-          "camera",
-          -Math.PI / 2,
-          Math.PI / 2.5,
-          15,
-          new BABYLON.Vector3(0, 0, 0)
-        );
-        camera.attachControl(canvas, true);
-        const light = new BABYLON.HemisphericLight(
-          "light",
-          new BABYLON.Vector3(4, 1, 0)
-        );
+        largeGround.position.y = -0.01;
 
         BABYLON.SceneLoader.ImportMeshAsync(
           "",
           "https://assets.babylonjs.com/meshes/",
           "village.glb"
-        );
+        ).then(() => {
+          const ground2 = scene.getMeshByName("ground");
+          ground.position.y = -0.5;
+        });
 
         // COLLISION
         const wireMat = new BABYLON.StandardMaterial("wireMat");
