DAY TO NIGHT SLIDER INTERACTION

--- a/pages/index.html
+++ b/pages/index.html
@@ -48,8 +48,10 @@
     <script src="https://code.jquery.com/pep/0.4.3/pep.js"></script>
     <!-- AIRCUT ALGORITHM-->
     <script src="https://preview.babylonjs.com/earcut.min.js"></script>
-
+    <!-- BABYLON VIEWER-->
     <script src="https://preview.babylonjs.com/viewer/babylon.viewer.js"></script>
+    <!-- BABYLON GUI-->
+    <script src="https://cdn.babylonjs.com/gui/babylon.gui.min.js"></script>
   </head>
   <body>
     <div id="holder">
@@ -90,7 +92,42 @@
           new BABYLON.Vector3(1, 1, 0)
         );
 
-        light.intensity = 0.3;
+        light.intensity = 1;
+
+        // GUI
+        const adt = BABYLON.GUI.AdvancedDynamicTexture.CreateFullscreenUI("UI");
+
+        const panel = new BABYLON.GUI.StackPanel();
+        panel.width = "220px";
+        panel.top = "-25px";
+        panel.horizontalAlignment =
+          BABYLON.GUI.Control.HORIZONTAL_ALIGNMENT_RIGHT;
+        panel.verticalAlignment = BABYLON.GUI.Control.VERTICAL_ALIGNMENT_BOTTOM;
+        adt.addControl(panel);
+
+        const header = new BABYLON.GUI.TextBlock();
+        header.text = "Night to Day";
+        header.height = "30px";
+        header.color = "white";
+        panel.addControl(header);
+
+        const slider = new BABYLON.GUI.Slider();
+        slider.minimum = 0;
+        slider.maximum = 1;
+        slider.borderColor = "black";
+        slider.color = "gray";
+        slider.background = "white";
+        slider.value = 1;
+        slider.height = "20px";
+        slider.width = "200px";
+        slider.onValueChangedObservable.add((value) => {
+          if (light) {
+            light.intensity = value;
+          }
+        });
+        panel.addControl(slider);
+
+        // LAMP
 
         BABYLON.SceneLoader.ImportMeshAsync(
           "",
